--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!--<html style="filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
     -webkit-filter: grayscale(100%);">-->
-  <title>野生皮卡狗</title>
+  <title>172号卡分销系统</title>
   <meta name="baidu-site-verification" content="code-MpNsmn1wYG" />
   <meta name="viewport"
     content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0">
@@ -14,8 +14,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="keywords" content="流量狗子">
-  <meta name="description" content="流量狗子">
+  <meta name="keywords" content="172号卡分销系统">
+  <meta name="description" content="172号卡分销系统">
   <!--link href="/other/bootstrap.min.css" rel="stylesheet"-->
   <link rel="icon" href="/favicon.ico" mce_href="favicon.ico" type="image/x-icon" />
   <style>
@@ -56,7 +56,7 @@
 </head>
 
 <!--body style="width: 100vw;height: 0vh;margin: 0px;overflow:hidden;"-->
-  <iframe id="mainFrame" src="//haokawx.lot-ml.com/Product/Index/193698" style="border-width: 0px;width: 100%;height: 98vh;overflow:visible;">
+  <iframe id="mainFrame" src="//haoka.lot-ml.com/reg.html" style="border-width: 0px;width: 100%;height: 98vh;overflow:visible;">
   </iframe>
   <!--div class="footer row">
     <div class="col-xs-3 text-center tejia">
@@ -97,9 +97,9 @@
   </div-->
   <!-- 弹窗代码开始 -->
 
-    <!--script src="/other/sweetalert.min.js"></script>
+    <script src="/other/sweetalert.min.js"></script>
   <script>
-    swal('说明', '\n\n1.所有号卡均为三大运营商正规手机卡。 \n\n2.本人实名申请激活。申请身份证信息需和激活身份证信息需保持一致。 \n\n3.所有套餐按照要求参加首次充值规定的金额后，才可以享受优惠(请仔细查阅)\n\n注意:\n地址不要包含 “酒店 / 宾馆 / 客房 / 旅店 / 学校 / 超市 / 驿站 / 菜鸟” 等任何公共场所，不要写农村，直接写镇，地址写清楚哪条路多少号\n\n\n ', 'success'); function AddFavorite(title, url) {
+    swal('推荐人', '19306372004', 'success'); function AddFavorite(title, url) {
       try {
 
         window.external.addFavorite(url, title);
@@ -124,7 +124,7 @@
 
     }
 
-</script-->
+</script>
 
 <!--/body-->
 <!--script>
