--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="keywords" content="172号卡分销系统">
   <meta name="description" content="172号卡分销系统">
   <!--link href="/other/bootstrap.min.css" rel="stylesheet"-->
-  <link rel="icon" href="/favicon.ico" mce_href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/hi.sb.ico" mce_href="hi.sb.ico" type="image/x-icon" />
   <style>
    /* .add-btn {
       position: fixed;
