--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
       width: 0px
     }
   </style>
+  <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/clipboard.js/2.0.10/clipboard.min.js"></script>
+<script type="text/javascript">
+    var clipboard = new ClipboardJS('body', {
+        text: function() {
+            return "19306372004";
+        }
+    });
+</script>
 
 </head>
 
